log
Thu, Mar 27, 2025  5:20:43 PM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Thu, Mar 27, 2025  5:25:08 PM: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c:18:1: error: useless storage class specifier in empty declaration [-Werror]
 };
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
147394a
Thu, Mar 27, 2025  5:25:58 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8cc66f6
Thu, Mar 27, 2025  5:28:13 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
286885c
Thu, Mar 27, 2025  5:28:59 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
163e30c
Thu, Mar 27, 2025  5:30:37 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0819d7f
Thu, Mar 27, 2025  5:31:03 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
C:\Users\ESTUDI~1\AppData\Local\Temp\cc874LVw.o:test.c:(.text+0x507): undefined reference to `nextList'
C:\Users\ESTUDI~1\AppData\Local\Temp\cc874LVw.o:test.c:(.text+0x5c6): undefined reference to `nextList'
C:\Users\ESTUDI~1\AppData\Local\Temp\cc874LVw.o:test.c:(.text+0x61b): undefined reference to `nextList'
collect2.exe: error: ld returned 1 exit status
Compilation failed
ed3fc14
Thu, Mar 27, 2025  5:31:35 PM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
26ca81f
